package switch2020.project.domain.sandbox;

import java.util.Date;

public interface Transaction {

}
